# RISC-V-in-SystemC

./: AGENTS.md  CMakeLists.txt  README.md  arbiter.cpp  arbiter.hpp  axi_master.hpp  axi_slave.hpp  compile_flags.txt  fir.cpp  fir.hpp  main.cpp  matmul.cpp  matmul.hpp  memory.cpp  memory.hpp  rv32i.cpp  rv32i.hpp  tb.cpp  tb.hpp
